# DB-Anywhere

./: .envrc  .gitignore  LICENSE  README.md
backend/: .env  Makefile  pyproject.toml  requirements.txt
backend/anywhere/: logging.conf  main.py
backend/anywhere/common/: _enum.py  _logging.py  base_sql_model.py  config.py  kubernetes_client.py  singleton.py
backend/anywhere/databases/: controller.py  model.py  repository.py  service.py
backend/anywhere/databases/repositories/: db.py
backend/anywhere/databases/repositories/k8s/: _deployment.py  _pvc.py  _service.py  database_kubernetes.py
backend/anywhere/databases/repositories/k8s/templates/: deployment.yaml  pvc.yaml  service.yaml
backend/anywhere/databases/repositories/k8s/templates/deployments/: mongodb.yaml  mysql.yaml  postgres.yaml
backend/anywhere/databases/schemas/: enum.py  schema.py
backend/anywhere/users/: const.py  controller.py  model.py  repository.py  service.py
backend/anywhere/users/schemas/: schema.py
backend/anywhere/users/services/: auth_service.py  user_service.py
backend/docker/: Dockerfile
backend/docker/event_listener/: Dockerfile  Makefile  pyproject.toml
backend/docker/event_listener/event_listener/: main.py  settings.py
backend/docker/event_listener/event_listener/resources/: db_client.py  deployment_event.py  listener.py  schema.py  service_event.py
frontend/: .env.example  .eslintrc  Dockerfile  Makefile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
helm/: Makefile
myApp/: angular.json  package-lock.json  (+1 more)
(+119 files in other folders)
