[tool.poetry]
name = "db-anywhere"
version = "0.1.0"
description = ""
authors = ["BenzhaminKim <dudgnl37@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
SQLAlchemy = "^1.4.45"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
