[tool.poetry]
name = "db-anywhere"
version = "0.1.0"
description = ""
authors = ["BenzhaminKim <dudgnl37@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = {extras = ["email"], version = "^1.10.4"}
python-dotenv = "^0.21.0"
SQLAlchemy = "^1.4.45"
passlib = "^1.7.4"
python-dateutil = "2.8.1"
kubernetes = "^25.3.0"
uvicorn = "^0.20.0"
jose = "^1.0.0"
python-jose = "^3.3.0"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
