[tool.poetry]
name = "event-listener"
version = "0.1.0"
description = ""
authors = ["BenzhaminKim <dudgnl37@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.6"
asyncio = "^3.4.3"
python-dateutil = "2.8.1"
kubernetes = "^26.1.0"
sqlalchemy = "^2.0.7"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
